[package]
name = "apivolve"
version = "0.1.0"
description = "Apivolve is an API evolution tool, it helps keep your APIs backwards compatible yet clean, and generates client/server code in a variety of languages."
edition = "2021"
publish = true
license = "Apache-2.0"
default-run = "apivolve"

[[bin]]
name = "apivolve"
path = "src/main.rs"
required-features = ["bin"]

[[bin]]
name = "apivolve0-gen-json"
path = "src/gen/json/main.rs"
required-features = ["bin"]

[lib]
name = "apivolve"
path = "src/lib.rs"

[features]
bin = ["jemallocator", "env_logger", "structopt"]

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
# general
log = "0.4.14"
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1.5.4"
lazy_static = "1.4.0"
futures = "0.3.19"
sha2 = "0.10.1"
base64 = "0.13.0"
which = { version = "4.2.4", features = ["regex"] }

# bin
env_logger = { version = "0.9.0", optional = true }
structopt = { version = "0.3.25", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.3.2", optional = true }

[profile.release]
lto = "thin"
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

