[package]
name = "apivolve"
version = "0.1.1"
description = "Apivolve is an API evolution tool, it helps keep your APIs backwards compatible yet clean, and generates client/server code in a variety of languages."
edition = "2021"
publish = true
license = "Apache-2.0"
default-run = "apivolve"
repository = "https://github.com/mverleg/apivolve"

[[bin]]
name = "apivolve"
path = "src/main.rs"
required-features = ["binary"]

[lib]
name = "apivolve"
path = "src/lib.rs"

[features]
binary = [
  "jemallocator",
  "env_logger",
  "structopt",
]

[build-dependencies]
lalrpop = "0.19.12"

[dependencies]
# general
log = "0.4.17"
lalrpop-util = { version = "0.19.12", features = ["lexer"] }
regex = "1.8.1"
lazy_static = "1.4.0"
futures = "0.3.28"
sha2 = "0.10.6"
base64 = "0.21.0"
which = { version = "4.4.0", features = ["regex"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
semver = { version = "1.0.17", features = ["serde"] }
ustr = "0.9.0"
#dashmap = "5.1.0"
#derive-new = "0.5.9"
#derive-getters = "0.2.0"
itertools = "0.10.5"
apivolve_generator_api = "0.1.1"

# bin
env_logger = { version = "0.10.0", optional = true }
structopt = { version = "0.3.26", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }

[profile.release]
lto = "thin"
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

